# Makovi

./: .gitignore  COMPILER.md  Cargo.toml  Inner_Workings.md  README.md  expanded.rs
benches/: mod.rs
code_samples/: example.instanced.run  example.parsed.run  example.rb  multiply.ast.run  multiply.ir.run  multiply.rb  multiply.run  old_mult.ast.run  old_mult.ir.run  old_mult.run  smallest_factor.ast.rs  smallest_factor.ast.run  smallest_factor.ir.run  smallest_factor.rb  smallest_factor.run
src/: lib.rs  test_utils.rs
src/._bin/: toy.rs
src/ast/: display.rs  mod.rs  operator.rs  statement.rs
src/compiler/: error.rs  mod.rs  symbols.rs
src/compiler/_jit/: mod.rs
src/compiler/backend/: backend_value.rs  compilation.rs  executable.rs  mod.rs
src/compiler/hir/: definition.rs  external.rs  instance.rs  mod.rs  value.rs
src/compiler/lexer/: mod.rs  tokens.rs
src/compiler/parser/: expressions.rs  mod.rs  parameters.rs  scope.rs  tokens.rs
src/compiler/type_inference/: mod.rs
src/error/: line_span.rs  mod.rs
src/ir/: control_flow.rs  function_translator.rs  mod.rs  translations.rs
src/jit/: mod.rs
src/lazy_parser/: expressions.rs  mod.rs  statements.rs
src/lexer/: mod.rs  token_match_macros.rs  tokens.rs
src/parser/: expanded.rs  lexer.rs  mod.rs  parse.rs  peg_parser.rs
src/parser/ast/: display.rs  mod.rs
src/parser/block_stage/: mod.rs
src/parser/logos/: lexer.rs  mod.rs
src/parser/statement_stage/: checks.rs  mod.rs  (+1 more)
src/runtime/: mod.rs
src/utils/: buffers.rs  mod.rs  test_utils.rs
tests/: code_samples_utils.rs  run_samples.rs
(+1 files in other folders)
